@@ -45,3 +45,4 @@
 2012-08-28  Cedric Bail
 
 	* Reset VLC pipeline on EOS.
+	* Fix a race condition on shutdown when still saving a file position.
